NO-JIRA Fix activemq5-unit-tests with byteman